# ChiQ

./: .gitignore  CMakeLists.txt  README.md  index.html
.github/workflows/: deploy_docs.yml  main.yml
cmake/: chiqvars.sh.build.in  chiqvars.sh.installed.in
doc/: about.rst  algorithms.rst  conf.py  install.rst  programs.rst  tutorial.rst
doc/_static/: chiq.css
doc/programs/: bse_fft.rst  bse_post.rst  bse_tool.rst  calc_Iq.rst  calc_Iq_scl.rst  chiq_main.rst  dcore_bse.rst  eigenvec_viewer.rst  plot_Ir.rst  plot_chiq_path.rst
doc/reference/: h5bse.rst  hdf5.rst  input.rst  output.rst
doc/tutorial/: Neel_temperature.rst  intersite_interactions.rst  multiple_orb.rst  single_orb.rst  spectrum.rst
examples/spectrum/: bse.in  coefs.in  dmft_square.in  run.sh
examples/square_Ir/: bse.in  dmft_square.in  eigenvec.in  label1.in  label2.in  run.sh
examples/square_bse/: bse.in  dmft_square.in  run.sh
examples/square_bse_TNeel/: bse.in  dmft_square.in  plot_chiinv.plt  qpath.in  run.sh
examples/square_rpa/: bse.in  dmft_square.in  run.sh
examples/square_scl/: bse.in  dmft_square.in  run.sh  scl_2pole.in
examples/two_orbital/: bse.in  dmft_2orb.in  eigenvec.in  label.in  make_hr_norb.py  run.sh
manual/develop/html/: objects.inv  searchindex.js
manual/develop/html/.doctrees/: about.doctree  algorithms.doctree  environment.pickle  install.doctree  programs.doctree  (+1 more)
manual/main/html/: .buildinfo  about.html  algorithms.html  index.html  install.html  programs.html  reference.html  search.html  searchindex.js  support.html  tutorial.html
manual/v1.0-beta/html/: algorithms.html  index.html  searchindex.js
python/: CMakeLists.txt
python/package/: bse
python/package/chiq/: _mpi.py  _no_mpi.py  bse_toml.py  bse_worker.py  chiq_eigen_path.py  g2scl_core.py  h5bse.py  index_pair.py  matrix_dict.py  pade.py  point_group.py  sumk_dft_chi.py  tools.py
python/package/chiq/point_group_data/: C1.py  C2.py  D3.py  D4.py  D6.py  O.py  Oh.py  __init__.py  base.py
python/package/chiq/point_group_data/backup/: O.py  Oh.py  share.py
python/scripts/: bse_post.py  bse_tool.py  calc_Iq.py  calc_Iq_scl.py  chiq_anacont.py  chiq_fft.py  chiq_main.py  chiq_post.py  dcore_chiq.py  eigenvec_viewer.py  g2scl.py  g2scl_manip_h5.py  gen_allq.py  gen_qpath.py  merge_eigen_weight.py  plot_Ir.py  plot_Ir_weight.py  plot_chiq_path.py  plot_chiq_weight.py  point_group_info.py  txt2bse.py
python/scripts/obsolete/: bse_tool.pass_data_by_file.py  chiq_pickup.py  crystal_field.py  find_tc.py  get_pq.py  scl_set_param.py
src/: CMakeLists.txt  Doxyfile  block_matrix.hpp  block_matrix_pybind.hpp  bse.hpp  bse_solver_pybind.cpp  main.cpp  memory_info.hpp  set_initial.cpp  set_initial.hpp
tests/: CMakeLists.txt
tests/c++/: CMakeLists.txt  blockmatrixTest.cpp  blockmatrixTest.hpp
tests/c++/archive/: bseTest.cpp
tests/python/: pytest.ini
tests/python/mpi/bsetool_BSE/: bse.toml  param.in  test_bsetool_BSE_MPI.py
tests/python/mpi/bsetool_BSE/ref/: dmft_bse.h5
tests/python/mpi/chi0q_fft/: chi0q_fft_sum.py  gen_h5_hubbard.py  hk_converter_chi.py  param.in  test_chi0q_fft.py
tests/python/non-mpi/bsepost_linear_combination/: bse.toml  test_bsepost_linear_combination.py  weight.in
tests/python/non-mpi/bsepost_linear_combination/ref/: dmft_bse.out.h5
tests/python/non-mpi/bsetool_BSE/: bse.toml  dcore.in  test_bsetool_BSE.py
tests/python/non-mpi/bsetool_RPA/: bse.toml  dcore.in  eigenvec.in  param.in  qpath.in  test_bsetool_RPA.py
tests/python/non-mpi/bsetool_RPA/ref/: dmft_bse.h5
tests/python/non-mpi/bsetool_RRPA/: bse.toml  test_bsetool_RRPA.py
tests/python/non-mpi/bsetool_SCL/: bse.toml  scl_2pole.in  test_bsetool_SCL.py
tests/python/non-mpi/gen_qpath/: param.in  test_gen_qpath.py
tests/python/non-mpi/h5bse/: test_h5bse.py
tests/python/non-mpi/matrix_dict/: test_matrix_dict.py
tests/python/non-mpi/point_group/: test_point_group_data.py  test_point_group_irreps.py
(+93 files in other folders)
